[package]
name = "bidm"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
description = "Increments CK3 barony IDs. Use on extracted sections only, as it will mess with all (ID) = {something} formats."
homepage = "https://www.linkedin.com/in/younghyun-chi-a60b59a9/"
repository = ""
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
incremental = false
strip = true
panic = "unwind"

[profile.dev]
debug = true

[dependencies]
anyhow = "1.0.81"
clap = { version = "=4.5.4", features = ["derive"] }

